--- a/Movie Genre Classifier/MovieGenreClassifier.ipynb
+++ b/Movie Genre Classifier/MovieGenreClassifier.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "29f960f8-7709-4acd-b591-5f9183a4444b",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "ea0f39ea-dcea-4949-b2cb-bdbb0566d072",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "bf0a6135-297d-4720-9ee1-a346d43af644",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "54199   Curitiba is a city in movement, with rhythms ...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "3b6fa0ec-cee8-40f4-ae18-0528e7ee7ab1",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "3003746d-cc22-4e29-b1f3-6a682f34e941",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "00534954-04c3-4232-ac17-bddda3abda28",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "7bfa24e3-f715-41d8-b156-3e3b211d83a8",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_10696\\1078671139.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_22820\\1078671139.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  train_data = train_data.append(rows_to_append)\n"
      ]
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "7ae1fa90-097e-4b7f-80b4-adf6b9452450",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "5018a4f5-8067-421d-b0c1-7de13c6d889b",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "[91914 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "cff59315-b916-40ad-8c6d-5857ab662ca3",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "[16500 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "9adf68f7-9fea-444a-93c9-5ee68c03c4ce",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "[16500 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "876057c3-28a6-4c16-a64e-d9adcc056ad1",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
      "evalue": "invalid syntax (1541890828.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_10696\\1541890828.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    train_data.\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_22820\\1541890828.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    train_data.\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "04f958c0-0ca0-4f14-90db-18040dd0acd5",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
        "Name: 54201, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "a1e37779-cf62-4918-b05c-09617372e631",
    "metadata": {},
    "outputs": [],
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "a8e5f03c-66a3-44f2-aa61-7d7afca3c552",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
        "Index(['Sno', 'Name', 'Genre', 'Description'], dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "4742ec32-7511-43c4-aabf-20f59eea41b6",
    "metadata": {},
    "outputs": [],
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "1e8ac2c0-ad1a-4e77-b8dd-37251e264609",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "id": "634b3280-12df-47a2-ab17-34c42a8efab4",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "id": "e2bb886d-3c57-481d-abf6-eb6e6bd1215c",
    "metadata": {},
    "outputs": [],
@@ -1024,7 +1024,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
+   "id": "bfc39e69-1300-4e6f-a9be-c5a8616d600d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sno                                                        90002\n",
+       "Name                                  The Copper Village (2015) \n",
+       "Genre                                               documentary \n",
+       "Description    villag western nepal copper mine oper 400 year...\n",
+       "Name: 35786, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.iloc[90000]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "a7585bb6-caf2-4246-8ad4-644bcba12d3c",
    "metadata": {},
    "outputs": [],
@@ -1037,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "0e926400-2cf7-4905-b0c7-2cc975aa8191",
    "metadata": {},
    "outputs": [],
@@ -1058,13 +1083,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "6338a105-f42e-4b27-8736-77d8dc2a18f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " ...\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.22866037 0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "vectorizer = TfidfVectorizer(max_features=100)  \n",
-    "X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "X_train_vectorized = vectorizer.fit_transform(X_train).toarray()\n",
+    "print(X_train_vectorized)\n",
     "X_test_vectorized = vectorizer.transform(X_test)"
    ]
   },
@@ -1128,10 +1168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "160a35f8-0fe0-4639-adb1-8b62d457c06b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Bidirectional, LSTM, Dense, Embedding\n",
@@ -1221,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "id": "cdf13dd3-8ccd-440f-b16c-b422fbfa8479",
    "metadata": {},
    "outputs": [],
@@ -1232,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "97235332-b74a-42e5-8bb4-1e51a4880817",
    "metadata": {},
    "outputs": [],
@@ -1248,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "id": "9212bc27-3b01-4b16-9c8f-30c453344a67",
    "metadata": {},
    "outputs": [],
@@ -1309,8 +1357,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "d6fbe225-30b5-4a1e-a326-b1670750abd2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2ccc8799-4df0-4071-a386-f042f31e8928",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "df453534-d53b-45c3-9826-8a9b54402aab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "1293/1293 [==============================] - 67s 50ms/step - loss: 2.3536 - accuracy: 0.2472 - val_loss: 2.3398 - val_accuracy: 0.2547\n",
+      "Epoch 2/15\n",
+      "1293/1293 [==============================] - 62s 48ms/step - loss: 2.3352 - accuracy: 0.2676 - val_loss: 2.3103 - val_accuracy: 0.3083\n",
+      "Epoch 3/15\n",
+      "1293/1293 [==============================] - 60s 46ms/step - loss: 2.2864 - accuracy: 0.3120 - val_loss: 2.2716 - val_accuracy: 0.3176\n",
+      "Epoch 4/15\n",
+      "1293/1293 [==============================] - 58s 45ms/step - loss: 2.2675 - accuracy: 0.3190 - val_loss: 2.2540 - val_accuracy: 0.3253\n",
+      "Epoch 5/15\n",
+      "1293/1293 [==============================] - 59s 45ms/step - loss: 2.2691 - accuracy: 0.3178 - val_loss: 2.2596 - val_accuracy: 0.3218\n",
+      "Epoch 6/15\n",
+      "1293/1293 [==============================] - 59s 45ms/step - loss: 2.2384 - accuracy: 0.3287 - val_loss: 2.2355 - val_accuracy: 0.3329\n",
+      "Epoch 7/15\n",
+      "1293/1293 [==============================] - 58s 45ms/step - loss: 2.2225 - accuracy: 0.3357 - val_loss: 2.2174 - val_accuracy: 0.3358\n",
+      "Epoch 8/15\n",
+      "1293/1293 [==============================] - 62s 48ms/step - loss: 2.2103 - accuracy: 0.3421 - val_loss: 2.2153 - val_accuracy: 0.3420\n",
+      "Epoch 9/15\n",
+      "1293/1293 [==============================] - 59s 45ms/step - loss: 2.2007 - accuracy: 0.3436 - val_loss: 2.1985 - val_accuracy: 0.3438\n",
+      "Epoch 10/15\n",
+      "1293/1293 [==============================] - 58s 45ms/step - loss: 2.1925 - accuracy: 0.3471 - val_loss: 2.1936 - val_accuracy: 0.3454\n",
+      "Epoch 11/15\n",
+      "1293/1293 [==============================] - 57s 44ms/step - loss: 2.1872 - accuracy: 0.3490 - val_loss: 2.1895 - val_accuracy: 0.3453\n",
+      "Epoch 12/15\n",
+      "1293/1293 [==============================] - 57s 44ms/step - loss: 2.1841 - accuracy: 0.3486 - val_loss: 2.1962 - val_accuracy: 0.3449\n",
+      "Epoch 13/15\n",
+      "1293/1293 [==============================] - 57s 44ms/step - loss: 2.1782 - accuracy: 0.3500 - val_loss: 2.1865 - val_accuracy: 0.3467\n",
+      "Epoch 14/15\n",
+      "1293/1293 [==============================] - 58s 45ms/step - loss: 2.1741 - accuracy: 0.3508 - val_loss: 2.1889 - val_accuracy: 0.3419\n",
+      "Epoch 15/15\n",
+      "1293/1293 [==============================] - 58s 45ms/step - loss: 2.1702 - accuracy: 0.3516 - val_loss: 2.1823 - val_accuracy: 0.3476\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1ad2686af10>"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_vectors_reshaped = np.expand_dims(X_train_vectors, axis=-1)\n",
+    "X_test_vectors_reshaped = np.expand_dims(X_test_vectors, axis=-1)\n",
+    "\n",
+    "# Define MLPClassifier\n",
+    "model = Sequential([\n",
+    "    Bidirectional(LSTM(64)),\n",
+    "    Dense(len(np.unique(y_train_encoded)), activation='softmax')\n",
+    "])\n",
+    "\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "# Define the optimizer with a custom learning rate\n",
+    "optimizer = Adam(learning_rate=0.003)\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer=optimizer, loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train_vectors_reshaped, y_train_encoded, epochs=15, batch_size=64, validation_split=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d32c764e-752f-4a5b-82cf-93954cecc8c6",
    "metadata": {},
    "outputs": [],
    "source": []
