--- a/Movie Genre Classifier/MovieGenreClassifier.ipynb
+++ b/Movie Genre Classifier/MovieGenreClassifier.ipynb
@@ -1447,9 +1447,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3251ad81-80f3-461d-a7c7-eae6e43932bc",
+   "metadata": {},
+   "source": [
+    "# In conclusion word2vec vectorization technique seems to get the best out of the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32c764e-752f-4a5b-82cf-93954cecc8c6",
+   "id": "8dd69f65-c80b-4549-8b3f-a6c5ecccbb1b",
    "metadata": {},
    "outputs": [],
    "source": []
