--- a/Movie Genre Classifier/MovieGenreClassifier.ipynb
+++ b/Movie Genre Classifier/MovieGenreClassifier.ipynb
@@ -1455,9 +1455,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8f8ed20-43f2-416b-9724-f25e69af8ea9",
+   "metadata": {},
+   "source": [
+    "## Now let's look into Machine Learning models to see if it generates better accuracy models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd69f65-c80b-4549-8b3f-a6c5ecccbb1b",
+   "id": "3fac82ec-6225-4514-b667-2ea0ea1709f5",
    "metadata": {},
    "outputs": [],
    "source": []
