--- a/Movie Genre Classifier/MovieGenreClassifier.ipynb
+++ b/Movie Genre Classifier/MovieGenreClassifier.ipynb
@@ -1237,7 +1237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n"
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "model.fit(X_train_padded, y_train_encoded, epochs=10, batch_size=32, validation_split=0.1)\n"
    ]
   },
   {
@@ -1255,9 +1256,7 @@
      ]
     }
    ],
-   "source": [
-    "model.fit(X_train_padded, y_train_encoded, epochs=10, batch_size=32, validation_split=0.1)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
