--- a/Movie Genre Classifier/MovieGenreClassifier.ipynb
+++ b/Movie Genre Classifier/MovieGenreClassifier.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "29f960f8-7709-4acd-b591-5f9183a4444b",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "ea0f39ea-dcea-4949-b2cb-bdbb0566d072",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "bf0a6135-297d-4720-9ee1-a346d43af644",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "54199   Curitiba is a city in movement, with rhythms ...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "3b6fa0ec-cee8-40f4-ae18-0528e7ee7ab1",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "3003746d-cc22-4e29-b1f3-6a682f34e941",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "00534954-04c3-4232-ac17-bddda3abda28",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "7bfa24e3-f715-41d8-b156-3e3b211d83a8",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_22820\\1078671139.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_34068\\1078671139.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  train_data = train_data.append(rows_to_append)\n"
      ]
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "7ae1fa90-097e-4b7f-80b4-adf6b9452450",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "5018a4f5-8067-421d-b0c1-7de13c6d889b",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
        "[91914 rows x 4 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "cff59315-b916-40ad-8c6d-5857ab662ca3",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "[16500 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "9adf68f7-9fea-444a-93c9-5ee68c03c4ce",
    "metadata": {},
    "outputs": [
@@ -839,7 +839,7 @@
        "[16500 rows x 4 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "a1e37779-cf62-4918-b05c-09617372e631",
    "metadata": {},
    "outputs": [],
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "a8e5f03c-66a3-44f2-aa61-7d7afca3c552",
    "metadata": {},
    "outputs": [
@@ -915,7 +915,7 @@
        "Index(['Sno', 'Name', 'Genre', 'Description'], dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "4742ec32-7511-43c4-aabf-20f59eea41b6",
    "metadata": {},
    "outputs": [],
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "1e8ac2c0-ad1a-4e77-b8dd-37251e264609",
    "metadata": {},
    "outputs": [],
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "634b3280-12df-47a2-ab17-34c42a8efab4",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "e2bb886d-3c57-481d-abf6-eb6e6bd1215c",
    "metadata": {},
    "outputs": [],
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "bfc39e69-1300-4e6f-a9be-c5a8616d600d",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1037,7 @@
        "Name: 35786, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "a7585bb6-caf2-4246-8ad4-644bcba12d3c",
    "metadata": {},
    "outputs": [],
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "0e926400-2cf7-4905-b0c7-2cc975aa8191",
    "metadata": {},
    "outputs": [],
@@ -1105,6 +1105,14 @@
     "X_train_vectorized = vectorizer.fit_transform(X_train).toarray()\n",
     "print(X_train_vectorized)\n",
     "X_test_vectorized = vectorizer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb3b512d-f49a-4353-ac2d-eb8038018d1c",
+   "metadata": {},
+   "source": [
+    "#### MultiClass Perceptron Classifier"
    ]
   },
   {
@@ -1215,6 +1223,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "626af604-c2aa-4a5c-ace3-d283da2b0dea",
+   "metadata": {},
+   "source": [
+    "#### Bidirectional LSTM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "id": "71bf9832-a81a-4f35-8bca-01f34116cf04",
@@ -1267,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "cdf13dd3-8ccd-440f-b16c-b422fbfa8479",
    "metadata": {},
    "outputs": [],
@@ -1278,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "id": "97235332-b74a-42e5-8bb4-1e51a4880817",
    "metadata": {},
    "outputs": [],
@@ -1294,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "id": "9212bc27-3b01-4b16-9c8f-30c453344a67",
    "metadata": {},
    "outputs": [],
@@ -1307,6 +1323,14 @@
     "label_encoder = LabelEncoder()\n",
     "y_train_encoded = label_encoder.fit_transform(train_data['Genre'])\n",
     "y_test_solution_encoded = label_encoder.transform(test_data_solution['Genre'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdb4766a-bf5e-45c3-b375-324601a7c183",
+   "metadata": {},
+   "source": [
+    "#### MultiClass Perceptron Classifier"
    ]
   },
   {
@@ -1362,12 +1386,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "2ccc8799-4df0-4071-a386-f042f31e8928",
+   "cell_type": "markdown",
+   "id": "42fa4be9-c629-4048-a2a6-3c1bb30b9422",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "####  Bidirectional LSTM"
+   ]
   },
   {
    "cell_type": "code",
@@ -1457,13 +1481,58 @@
    "id": "f8f8ed20-43f2-416b-9724-f25e69af8ea9",
    "metadata": {},
    "source": [
-    "## Now let's look into Machine Learning models to see if it generates better accuracy models."
+    "## Now let's look into some Machine Learning models to see if it generates better accuracy models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "038c157c-3c3d-4125-8ec7-845ee2d6c5f7",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "59b164ad-e913-48c7-9508-4e7fdeec7134",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ec382a2a-3823-4ba9-a5f6-c4b078d7d188",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.34763636363636363\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = SVC()\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train_vectors, y_train_encoded)\n",
+    "\n",
+    "# Predict on test data\n",
+    "y_pred = model.predict(X_test_vectors)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test_solution_encoded, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fac82ec-6225-4514-b667-2ea0ea1709f5",
+   "id": "b34453f0-987f-458a-a763-2e16abf30185",
    "metadata": {},
    "outputs": [],
    "source": []
