--- a/Movie Genre Classifier/Untitled.ipynb
+++ b/Movie Genre Classifier/Untitled.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -166,7 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_15196\\1078671139.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\susha\\AppData\\Local\\Temp\\ipykernel_3152\\1078671139.py:12: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  train_data = train_data.append(rows_to_append)\n"
      ]
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5be3990f-e7bf-44b0-8e0d-751adb3cb0d0",
    "metadata": {},
    "outputs": [],
@@ -381,10 +381,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1e9c9c69-2b8a-4c1c-a619-f5a4b8884261",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_5\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_29 (Dense)            (None, 1024)              103424    \n",
+      "                                                                 \n",
+      " dropout_12 (Dropout)        (None, 1024)              0         \n",
+      "                                                                 \n",
+      " dense_30 (Dense)            (None, 512)               524800    \n",
+      "                                                                 \n",
+      " dense_31 (Dense)            (None, 256)               131328    \n",
+      "                                                                 \n",
+      " dense_32 (Dense)            (None, 256)               65792     \n",
+      "                                                                 \n",
+      " dense_33 (Dense)            (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense_34 (Dense)            (None, 128)               16512     \n",
+      "                                                                 \n",
+      " dense_35 (Dense)            (None, 64)                8256      \n",
+      "                                                                 \n",
+      " dense_36 (Dense)            (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense_37 (Dense)            (None, 27)                891       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 885,979\n",
+      "Trainable params: 885,979\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/20\n",
+      "2586/2586 [==============================] - 30s 11ms/step - loss: 2.3427 - accuracy: 0.2686 - val_loss: 2.2991 - val_accuracy: 0.3255\n",
+      "Epoch 2/20\n",
+      "2586/2586 [==============================] - 28s 11ms/step - loss: 2.2893 - accuracy: 0.3158 - val_loss: 2.2830 - val_accuracy: 0.3293\n",
+      "Epoch 3/20\n",
+      "2586/2586 [==============================] - 28s 11ms/step - loss: 2.2740 - accuracy: 0.3247 - val_loss: 2.3025 - val_accuracy: 0.2875\n",
+      "Epoch 4/20\n",
+      "2586/2586 [==============================] - 31s 12ms/step - loss: 2.2637 - accuracy: 0.3308 - val_loss: 2.2888 - val_accuracy: 0.2726\n",
+      "Epoch 5/20\n",
+      "2586/2586 [==============================] - 30s 12ms/step - loss: 2.2570 - accuracy: 0.3329 - val_loss: 2.3467 - val_accuracy: 0.2596\n",
+      "Epoch 6/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2515 - accuracy: 0.3362 - val_loss: 2.3309 - val_accuracy: 0.2606\n",
+      "Epoch 7/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2518 - accuracy: 0.3373 - val_loss: 2.2964 - val_accuracy: 0.2678\n",
+      "Epoch 8/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2506 - accuracy: 0.3376 - val_loss: 2.3473 - val_accuracy: 0.2626\n",
+      "Epoch 9/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2483 - accuracy: 0.3383 - val_loss: 2.3689 - val_accuracy: 0.2558\n",
+      "Epoch 10/20\n",
+      "2586/2586 [==============================] - 30s 12ms/step - loss: 2.2445 - accuracy: 0.3402 - val_loss: 2.3689 - val_accuracy: 0.2625\n",
+      "Epoch 11/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2502 - accuracy: 0.3370 - val_loss: 2.3419 - val_accuracy: 0.2693\n",
+      "Epoch 12/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2435 - accuracy: 0.3423 - val_loss: 2.3780 - val_accuracy: 0.2627\n",
+      "Epoch 13/20\n",
+      "2586/2586 [==============================] - 30s 12ms/step - loss: 2.2442 - accuracy: 0.3415 - val_loss: 2.3550 - val_accuracy: 0.2633\n",
+      "Epoch 14/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2415 - accuracy: 0.3420 - val_loss: 2.3360 - val_accuracy: 0.2694\n",
+      "Epoch 15/20\n",
+      "2586/2586 [==============================] - 28s 11ms/step - loss: 2.2421 - accuracy: 0.3420 - val_loss: 2.3563 - val_accuracy: 0.2629\n",
+      "Epoch 16/20\n",
+      "2586/2586 [==============================] - 28s 11ms/step - loss: 2.2414 - accuracy: 0.3422 - val_loss: 2.3941 - val_accuracy: 0.2590\n",
+      "Epoch 17/20\n",
+      "2586/2586 [==============================] - 28s 11ms/step - loss: 2.2401 - accuracy: 0.3422 - val_loss: 2.3261 - val_accuracy: 0.2787\n",
+      "Epoch 18/20\n",
+      "2586/2586 [==============================] - 28s 11ms/step - loss: 2.2403 - accuracy: 0.3430 - val_loss: 2.3548 - val_accuracy: 0.2626\n",
+      "Epoch 19/20\n",
+      "2586/2586 [==============================] - 28s 11ms/step - loss: 2.2424 - accuracy: 0.3422 - val_loss: 2.3659 - val_accuracy: 0.2652\n",
+      "Epoch 20/20\n",
+      "2586/2586 [==============================] - 29s 11ms/step - loss: 2.2416 - accuracy: 0.3431 - val_loss: 2.3613 - val_accuracy: 0.2626\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
@@ -402,15 +478,25 @@
     "\n",
     "# Define the model\n",
     "model = Sequential([\n",
-    "    Dense(512, activation='relu', input_shape=(X_train_vectors.shape[1],)),\n",
+    "    Dense(1024, activation='relu', input_shape=(X_train_vectors.shape[1],)),\n",
     "    Dropout(0.7),  # Add dropout layer to prevent overfitting\n",
+    "\n",
+    "    Dense(512, activation='relu'),\n",
+    "\n",
+    "    \n",
     "    Dense(256, activation='relu'),\n",
     "    # Dropout(0.7),\n",
+    "    \n",
+    "    Dense(256, activation='relu'),\n",
+    "    # Dropout(0.7),\n",
+    "    \n",
     "    Dense(128, activation='relu'),\n",
+    "    Dense(128, activation='relu'),\n",
+    "\n",
     "    # Dropout(0.7),\n",
     "\n",
     "    Dense(64, activation='relu'),\n",
-    "    Dropout(0.7),\n",
+    "    # Dropout(0.7),\n",
     "\n",
     "    Dense(32, activation='relu'),\n",
     "\n",
