--- a/Credit Card Fraud Detection/CreditCardFraudDetection.ipynb
+++ b/Credit Card Fraud Detection/CreditCardFraudDetection.ipynb
@@ -567,7 +567,7 @@
    ],
    "source": [
     "plt.bar(np.arange(df.shape[0])-0.8, df['Age'], width=.2)\n",
-    "plt.xticks(np.arange(df.shape[0]-.8),df['Name'])\n"
+    "plt.xticks(np.arange(df.shape[0]-.8),df['Name'])"
    ]
   },
   {
