--- a/Credit Card Fraud Detection/CreditCardFraudDetection.ipynb
+++ b/Credit Card Fraud Detection/CreditCardFraudDetection.ipynb
@@ -1358,6 +1358,16 @@
    "cell_type": "markdown",
    "id": "3e1c6e8a-a445-4e7a-85e4-abe6c5ff4249",
    "metadata": {},
+   "source": [
+    "### So, we'll look into methods to balance the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddfa416d-4343-495c-b2af-334b2bc253b2",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
